# kamui

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  test.py
.agents/skills/read-arxiv-paper/: SKILL.md
examples/: makemore.ipynb  makemore_mlp.ipynb  mnist.ipynb  moon.ipynb  viz.ipynb
examples/gpt/: README.md  nano.py
examples/makemore/: bigram.ipynb  cnn_wavenet.ipynb  mlp.ipynb  mlp_pytorch.ipynb  trigram.ipynb
examples/micrograd/: exercises.ipynb  viz.ipynb
examples/pytorch/: cifar10_lenet.ipynb  fashion-mnist.ipynb  fashion_mnist_lenet.ipynb  fashion_mnist_mlp.ipynb  lenet.ipynb
media/: gpt2_fineweb_edu10B_sample.txt  gpt2_tinyshakespeare_sample.txt
notebooks/: geepeetee.ipynb  nano.ipynb  tiktok.ipynb
notebooks/makemore/: bigram.ipynb  mlp.ipynb  mlp_backprop_ninja.ipynb  mlp_revisited.ipynb  trigram.ipynb
notebooks/micrograd/: mnist.ipynb  moon.ipynb  viz.ipynb
notebooks/pytorch/: cifar10_lenet.ipynb
scripts/: fineweb.py  fineweb_chat.py  hellaswag.py  pull.sh  pull_vast.sh  pull_wpi.sh  push.sh  push_vast.sh  push_wpi.sh  slurm_batch.sh  slurm_interactive.sh  slurm_pico.sh
src/kamui/: __init__.py  core.py  engine.py  main.py  nn.py  viz.py
src/pea/: __init__.py  core.py  nn.py  viz.py
src/pealm/: __init__.py  __main__.py  checkpoint.py  cli.py  constants.py  convert.py  dataset.py  eval.py  main.py  model.py  report.py  sample.py  settings.py  utils.py
src/pealm/chat/: __init__.py  cli.py  engine.py  state_machine.py  ui.html  web.py
src/pealm/chat/tool/: __init__.py  calculator.py
src/pealm/eval/: __init__.py  base.py  gpt2.py  gpt2_pretrained.py  hellaswag.py  peashooter_tokenizer.py
src/pealm/model/: __init__.py  base.py  char_bigram.py  char_transformer.py  gpt2.py  peashooter.py
src/pealm/models/: __init__.py  char_bigram.py  char_transformer.py  gpt2.py
src/pealm/report/: __init__.py  peashooter.py
src/pealm/sample/: __init__.py  base.py  char_bigram.py  char_transformer.py  gpt2.py  gpt2_pretrained.py
src/pealm/settings/: __init__.py  base.py  command.py  model.py  primitive.py
src/pealm/tokenice/: __init__.py  char_tokenizer.py  gpt2_tokenizer.py  peashooter_tokenizer.py  tokenizer.py
src/pealm/tokenizer/: __init__.py  char.py  gpt2.py  peashooter.py  vocab.py
src/pealm/train/: __init__.py  char_bigram.py  char_transformer.py  checkpoint.py  context.py  gpt2.py  peashooter_tokenizer.py
src/pealm/training/: __init__.py  checkpoint.py  context.py  train.py
src/picogpt/: README.md  __init__.py  __main__.py  constants.py  convert.py  dataset.py  evaluate.py  main.py  model.py  sample.py  settings.py  utils.py
src/picogpt/media/: char_transformer_sample.txt
src/picogpt/tokenice/: __init__.py  char_tokenizer.py  gpt2_tokenizer.py  tokenizer.py
src/picogpt/tokenizers/: __init__.py  char_tokenizer.py  tokenizer.py
src/picogpt/training/: __init__.py  checkpoint.py  context.py  train.py
test/: test_core.py  test_engine.py  test_nn.py
weights/char_bigram/2026-01-27_22-55-53/: best.pt
weights/char_bigram/20260127_225553/: best.pt
weights/char_tokenizer/2026-01-27_22-55-53/: tokenizer.json
weights/char_transformer/2026-01-27_22-55-53/: best.pt
weights/gpt2/20260210_183518/tinyshakespeare/: best.pt
weights/gpt2/fineweb_edu10B/20260214_015722/: best.pt
