[project]
name = "kamui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "felixngfender", email = "ngthinh302@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "datasets[image]>=4.4.1",
  "graphviz>=0.21",
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "matplotlib>=3.10.7",
  "prek>=0.2.13",
  "pytest>=8.4.2",
  "pytest-watcher>=0.4.3",
  "ruff>=0.14.3",
  "scikit-learn>=1.7.2",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "ty>=0.0.9",
]

[tool.ruff]
line-length = 120
lint.exclude = ["*.ipynb"]
lint.select = [
  "ALL", # include all the rules, including new ones
]
lint.ignore = [
  "D",      # missing docstrings
  "COM812", # missing trailing comma, conflict with formatter
]
# https://github.com/astral-sh/ruff-vscode/blob/main/README.md#configuring-vs-code
lint.extend-select = ["I"]
lint.per-file-ignores = { "test/*.py" = ["S101"] }

[tool.ty.src]
exclude = [
    "examples"
]
