[project]
name = "kamui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "felixngfender", email = "ngthinh302@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "rich>=14.3.1",
  "transformers[torch]>=5.0.0",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "tiktoken>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "datasets[image]>=4.4.1",
  "graphviz>=0.21",
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "matplotlib>=3.10.7",
  "prek>=0.2.13",
  "pytest>=8.4.2",
  "pytest-watcher>=0.4.3",
  "ruff>=0.14.3",
  "scikit-learn>=1.7.2",
  "tensorboard>=2.20.0",
  "ty>=0.0.9",
]

[project.scripts]
picogpt = "picogpt:main"

[tool.ruff]
line-length = 120
lint.exclude = ["*.ipynb"]
lint.select = [
  "ALL", # include all the rules, including new ones
]
lint.ignore = [
  "D",      # missing docstrings
  "COM812", # missing trailing comma, conflict with formatter
  "TD002",  # missing TODO author
  "TD003",  # missing issue link for this TODO
  "FIX002", # fix TODOs
]
# https://github.com/astral-sh/ruff-vscode/blob/main/README.md#configuring-vs-code
lint.extend-select = ["I"]
lint.per-file-ignores = { "test/*.py" = ["S101"] }

[tool.ty.src]
exclude = ["notebooks/micrograd/mnist.ipynb"]
