[project]
name = "pea"
version = "0.1.0"
description = "kindergartener language models"
readme = "README.md"
authors = [{ name = "felixngfender", email = "ngthinh302@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "datasets>=4.4.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "rich>=14.3.1",
  "transformers[torch]>=5.0.0",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "tiktoken>=0.12.0",
  "psutil>=7.2.2",
  "rustbpe>=0.1.0",
  "fastapi[standard]>=0.131.0",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "graphviz>=0.21",
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "matplotlib>=3.10.7",
  "prek>=0.2.13",
  "pytest>=8.4.2",
  "pytest-watcher>=0.4.3",
  "ruff>=0.14.3",
  "scikit-learn>=1.7.2",
  "tensorboard>=2.20.0",
  "ty>=0.0.9",
]

[project.scripts]
pealm = "pealm:main"

[tool.ruff]
line-length = 120
lint.exclude = ["*.ipynb"]
lint.select = [
  "ALL", # include all the rules, including new ones
]
lint.ignore = [
  "D",       # missing docstrings
  "COM812",  # missing trailing comma, conflict with formatter
  "TD002",   # missing TODO author
  "TD003",   # missing issue link for this TODO
  "FIX002",  # fix TODOs
  "C901",    # too complex
  "PLR0912", # too many branches
  "PLR0913", # too many arguments
  "PLR0915", # too many statements
  "N806",    # variables in function should be lowercase, but we want to use `X` and `y` for data and labels
  "N812",    # lowercase package imported as non-lowercase, we wanna use `torch.nn.functional` as `F`
]
# https://github.com/astral-sh/ruff-vscode/blob/main/README.md#configuring-vs-code
lint.extend-select = ["I"]
lint.per-file-ignores = { "test/*.py" = ["S101"], "scripts/*.py" = [
  # no asserts
  "S101",
  # part of implicit namespace package
  "INP001",
] }

[tool.ty.src]
exclude = ["notebooks/micrograd/mnist.ipynb"]

[tool.ty.rules]
possibly-missing-attribute = "ignore" # https://github.com/astral-sh/ty/issues/2244
